--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <title>Relógio Digital</title>
 </head>
 <body>
-    <div>Relógio</div>
+    <div class="relogio">
         <div>
                <span id="horas">00</span>
                <span class="tempo">horas</span>
         </div>
+ 
 
-    </div>
     <div>
         <span id="minutos">00</span>
         <span class="tempo">minutos</span>
@@ -23,5 +23,6 @@
         <span id="segundos">00</span>
         <span class="tempo">segundos</span>
     </div>
+    <script src="/script.js"></script>
 </body>
 </html>
